Fix progress bar animation, increase spacing, remove card borders

--- a/site/_sass/components/_carousel.scss
+++ b/site/_sass/components/_carousel.scss
@@ -18,12 +18,17 @@
   
   .carousel-item {
     transition: transform 0.6s ease-in-out;
+    
+    // Remove outer border from carousel cards
+    .blog-item {
+      border: none !important;
+    }
   }
   
   // Carousel teaser showing available sections
   .carousel-teaser {
     text-align: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.25rem;
     font-size: 0.95rem;
     color: $text-muted;
     display: flex;
@@ -80,10 +85,10 @@
       height: 100%;
       width: 0%;
       background: linear-gradient(90deg, rgba($link-color, 0.6) 0%, $link-color 100%);
-      transition: width 10s linear;
       
       &.animating {
         width: 100%;
+        transition: width 10s linear;
       }
     }
   }
